export const snapshot = {};

snapshot[`parse / success > "1.01" 1`] = `
NamedTokenNode {
  children: [
    NamedTokenNode {
      children: [
        NamedTokenNode {
          children: [
            NamedTokenNode {
              children: [
                NamedTokenNode {
                  children: [
                    LiteralTokenNode {
                      type: TokenType {
                        name: "\$literal",
                      },
                      value: "1",
                    },
                  ],
                  endAt: 1,
                  startAt: 0,
                  type: TokenType {
                    name: "binary-digit",
                  },
                },
              ],
              endAt: 1,
              startAt: 0,
              type: TokenType {
                name: "binary-number",
              },
            },
          ],
          endAt: 1,
          startAt: 0,
          type: TokenType {
            name: "binary-integer",
          },
        },
        LiteralTokenNode {
          type: TokenType {
            name: "\$literal",
          },
          value: ".",
        },
        NamedTokenNode {
          children: [
            NamedTokenNode {
              children: [
                LiteralTokenNode {
                  type: TokenType {
                    name: "\$literal",
                  },
                  value: "0",
                },
              ],
              endAt: 3,
              startAt: 2,
              type: TokenType {
                name: "binary-digit",
              },
            },
            NamedTokenNode {
              children: [
                LiteralTokenNode {
                  type: TokenType {
                    name: "\$literal",
                  },
                  value: "1",
                },
              ],
              endAt: 4,
              startAt: 3,
              type: TokenType {
                name: "binary-digit",
              },
            },
          ],
          endAt: 4,
          startAt: 2,
          type: TokenType {
            name: "binary-sequence",
          },
        },
      ],
      endAt: 4,
      startAt: 0,
      type: TokenType {
        name: "binary-decimal",
      },
    },
  ],
  endAt: 4,
  startAt: 0,
  type: TokenType {
    name: "binary-number",
  },
}
`;

snapshot[`parse / success > "1.10" 1`] = `
NamedTokenNode {
  children: [
    NamedTokenNode {
      children: [
        NamedTokenNode {
          children: [
            NamedTokenNode {
              children: [
                NamedTokenNode {
                  children: [
                    LiteralTokenNode {
                      type: TokenType {
                        name: "\$literal",
                      },
                      value: "1",
                    },
                  ],
                  endAt: 1,
                  startAt: 0,
                  type: TokenType {
                    name: "binary-digit",
                  },
                },
              ],
              endAt: 1,
              startAt: 0,
              type: TokenType {
                name: "binary-number",
              },
            },
          ],
          endAt: 1,
          startAt: 0,
          type: TokenType {
            name: "binary-integer",
          },
        },
        LiteralTokenNode {
          type: TokenType {
            name: "\$literal",
          },
          value: ".",
        },
        NamedTokenNode {
          children: [
            NamedTokenNode {
              children: [
                LiteralTokenNode {
                  type: TokenType {
                    name: "\$literal",
                  },
                  value: "1",
                },
              ],
              endAt: 3,
              startAt: 2,
              type: TokenType {
                name: "binary-digit",
              },
            },
            NamedTokenNode {
              children: [
                LiteralTokenNode {
                  type: TokenType {
                    name: "\$literal",
                  },
                  value: "0",
                },
              ],
              endAt: 4,
              startAt: 3,
              type: TokenType {
                name: "binary-digit",
              },
            },
          ],
          endAt: 4,
          startAt: 2,
          type: TokenType {
            name: "binary-sequence",
          },
        },
      ],
      endAt: 4,
      startAt: 0,
      type: TokenType {
        name: "binary-decimal",
      },
    },
  ],
  endAt: 4,
  startAt: 0,
  type: TokenType {
    name: "binary-number",
  },
}
`;

snapshot[`parse / success > "-10.10" 1`] = `
NamedTokenNode {
  children: [
    NamedTokenNode {
      children: [
        NamedTokenNode {
          children: [
            LiteralTokenNode {
              type: TokenType {
                name: "\$literal",
              },
              value: "-",
            },
          ],
          endAt: 3,
          startAt: 0,
          type: TokenType {
            name: "binary-integer",
          },
        },
        LiteralTokenNode {
          type: TokenType {
            name: "\$literal",
          },
          value: ".",
        },
        NamedTokenNode {
          children: [
            NamedTokenNode {
              children: [
                LiteralTokenNode {
                  type: TokenType {
                    name: "\$literal",
                  },
                  value: "1",
                },
              ],
              endAt: 5,
              startAt: 4,
              type: TokenType {
                name: "binary-digit",
              },
            },
            NamedTokenNode {
              children: [
                LiteralTokenNode {
                  type: TokenType {
                    name: "\$literal",
                  },
                  value: "0",
                },
              ],
              endAt: 6,
              startAt: 5,
              type: TokenType {
                name: "binary-digit",
              },
            },
          ],
          endAt: 6,
          startAt: 4,
          type: TokenType {
            name: "binary-sequence",
          },
        },
      ],
      endAt: 6,
      startAt: 0,
      type: TokenType {
        name: "binary-decimal",
      },
    },
  ],
  endAt: 6,
  startAt: 0,
  type: TokenType {
    name: "binary-number",
  },
}
`;
